tests/rosetta/out/Kotlin/active-object.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/active-object.kt:50:17: error: overload resolution ambiguity: 
public final operator fun plus(other: Byte): Double defined in kotlin.Double
public final operator fun plus(other: Byte): Int defined in kotlin.Int
public final operator fun plus(other: Int): Double defined in kotlin.Double
public final operator fun plus(other: Int): Int defined in kotlin.Int
public final operator fun plus(other: Long): Double defined in kotlin.Double
public final operator fun plus(other: Long): Long defined in kotlin.Int
public final operator fun plus(other: Short): Double defined in kotlin.Double
public final operator fun plus(other: Short): Int defined in kotlin.Int
        i2 = i2 + 1
                ^
